# BigInt

./: .gitmodules  BigInt.c  BigInt.h  CMakeLists.txt  README.md  config.mk  general.mk  linux.mk  sucio.c  sucio.h  windows.mk
example/: example.c  example1.c
include/: BigInt.h  Fractions.h
src/: BigInt.c  Fractions.c
